--- a/mysop.org
+++ b/mysop.org
@@ -1,10 +1,9 @@
 #+TITLE: 자기 소개서
 #+AUTHOR: 박 호열
-#+OPTIONS: toc:nil num:nil
+#+OPTIONS: toc:nil num:nil \n:t
 #+LATEX_HEADER: \usepackage{kotex}
 #+latex_header: \usepackage{setspace}
 #+latex_header: \onehalfspacing
-#+OPTIONS: \n:t
 
 안녕하세요. 저는 IT 분야에서 다양한 경력과 경험을 쌓아온 박호열이라고
 합니다. 회사가 원하는 fullstack web개발자이며, 대기업, 중소기업에서
